--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <nav> <!--Nav viene de la palabra navigator o sea esta nos mandará a los links que esten dentro de esta misma o los podemos redireccionar donde sea deseado-->
             <ul class="sidebar"> <!--Clase barra lateral, contiene una lista y anclas(anchors) a las otras paginas de nuestro sitio web-->
                 <li onclick=hideSidebar()><a href="#"><svg xmlns="http://www.w3.org/2000/svg" height="26" viewBox="0 -960 960 960" width="26"><path d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z"/></svg></a></li>
-                <li><a href="#">Inicio</a></li> <!-- link a index-->
+                <li><a class="not-active">Inicio</a></li> <!-- link a index-->
                 <li><a href="infoChan.html">Sobre Xan</a></li><!-- link a info chan-->
                 <li><a href="portfolio.html">Portafolio</a></li><!-- link a portafolio de imagenes-->
             </ul> <!--unordered list -->
@@ -99,9 +99,9 @@
             </div><!-- cierre de division de la figura -->
             <div class="caja"> <!-- caja para agregar a los integrantes-->
                 <h2>Integrantes</h2> <!-- Titulo pequeño para mostrar sobre los integrantes-->
-                <p>Sthefanie "Sami" Castro</p><!-- integrante-->
-                <p>Jonathan "Dexus" Choque</p><!-- integrante-->
-                <p>Diego "Miza" Pacheco</p><!-- integrante-->
+                <p>Sthefanie "Sami" Castro <br>Jonathan "Dexus" Choque <br>Diego "Miza" Pacheco</p><!-- integrante-->
+                <p></p><!-- integrante-->
+                <p></p><!-- integrante-->
             </div><!--cierre division caja -->
             <div class="caja"> <!--nueva caja para los links de interés -->
                 <h2>Siguenos</h2><!--titulo de esta en tamaño h2--> 
