--- a/infoChan.html
+++ b/infoChan.html
@@ -25,7 +25,7 @@
             <ul class="sidebar">
                 <li onclick=hideSidebar()><a href="#"><svg xmlns="http://www.w3.org/2000/svg" height="26" viewBox="0 -960 960 960" width="26"><path d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z"/></svg></a></li>
                 <li><a href="index.html">Inicio</a></li>
-                <li><a href="#">Sobre Xan</a></li>
+                <li><a class="not-active">Sobre Xan</a></li>
                 <li><a href="portfolio.html">Portafolio</a></li>
             </ul> <!-- si es visto de un explorador de ordenador("PC")-->
             <ul>
