--- a/portfolio.html
+++ b/portfolio.html
@@ -27,7 +27,7 @@
                 <li onclick=hideSidebar()><a href="#"><svg xmlns="http://www.w3.org/2000/svg" height="26" viewBox="0 -960 960 960" width="26"><path d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z"/></svg></a></li>
                 <li><a href="index.html">Inicio</a></li>
                 <li><a href="infoChan.html">Sobre Xan</a></li>
-                <li><a href="#">Portafolio</a></li>
+                <li><a class="not-active">Portafolio</a></li>
             </ul>
             <ul>
                 <li><img src="assets/imgs/logo chan 1500x512 v2.png" alt="logo"></li>
