--- a/infoChan.html
+++ b/infoChan.html
@@ -23,7 +23,7 @@
     <header class="header">
         <nav>
             <ul class="sidebar">
-                <li onclick=hideSidebar()><a href="#"><svg xmlns="http://www.w3.org/2000/svg" height="26" viewBox="0 -960 960 960" width="26"><path d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z"/></svg></a></li>
+                <li onclick=hideSidebar()><a href="#"><i class="bi bi-x-lg"></i></a></li>
                 <li><a href="index.html">Inicio</a></li>
                 <li><a class="not-active">Sobre Xan</a></li>
                 <li><a href="portfolio.html">Portafolio</a></li>
@@ -33,7 +33,9 @@
                 <li class="hideOnMobile"><a href="index.html">Inicio</a></li>
                 <li class="hideOnMobile"><a href="#">Sobre Xan</a></li>
                 <li class="hideOnMobile"><a href="portfolio.html">Portafolio</a></li>
-                <li class="menu-button" onclick=showSidebar()><a href="#"><svg xmlns="http://www.w3.org/2000/svg" height="26" viewBox="0 -960 960 960" width="26"><path d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z"/></svg></a></li>
+                <li class="menu-button" onclick=showSidebar()><a href="#"><svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-list" viewBox="0 0 16 16">
+                    <path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5"/>
+                  </svg></a></li>
             </ul> <!--links para verlos en una pequeña box que aparece en el lado derecho de la pantalla -->
         </nav> <!--fin del navegador de nuestra barra lateral -->
     </header>
