--- a/index.html
+++ b/index.html
@@ -31,12 +31,14 @@
                 <li><a class="not-active">Inicio</a></li> <!-- link a index-->
                 <li><a href="infoChan.html">Sobre Xan</a></li><!-- link a info chan-->
                 <li><a href="portfolio.html">Portafolio</a></li><!-- link a portafolio de imagenes-->
+                <li><a href="patreon.html">Comisiones</a></li><!-- link a portafolio de imagenes-->
             </ul> <!--unordered list -->
             <ul> <!--Esto cambia si es que lo veo de mi dispositivo movil  y me agrega un pequeño boton de menu lateral en la esquina superior izquierda-->
                 <li><img src="assets/imgs/logo chan 1500x512 v2.png" alt="logo"></li>
                 <li class="hideOnMobile"><a href="#">Inicio</a></li>
                 <li class="hideOnMobile"><a href="infoChan.html">Sobre Xan</a></li>
                 <li class="hideOnMobile"><a href="portfolio.html">Portafolio</a></li>
+                <li class="hideOnMobile"><a href="patreon.html">Comisiones</a></li>
                 <li class="menu-button" onclick=showSidebar()><a href="#"><svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-list" viewBox="0 0 16 16">
                     <path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5"/>
                   </svg></i></a></li>
@@ -77,48 +79,48 @@
 
     <!-- Fin carrusel -->
 
-<!-- Párrafos laterales -->
-<aside class="contenedor-texto right"> <!-- Contenedor del primer párrafo lateral (derecha) -->
-    <div class="parrafo-lateral right"> <!-- Primer párrafo lateral (derecha)-->
-        <p>Mi nombre es Chanttal Pacheco, tambien conocida como Xan Proxy. <br>Nacida el 16 de Septiembre de 1991, siempre tuve facinacion por las artes visuales. He dibujado desde que tengo memoria, me gustan los retratos y la arquitectura. <br>Por cosas de la vida terminé estudiando para formar parte del cuerpo AVSEC en la Escuela Tecnica Aeronautica y actualmente mi principal trabajo es ser parte del equipo K9 del aeropuerto Arturo Merino Benitez. <br>Recientemente entre al mundo del tatuaje haciendo un curso en Ankaba (academia de tatuaje) y tambien hice un curso de para crear alfombras.</p>
-    </div>
-</aside>
+    <!-- Párrafos laterales -->
+    <aside class="contenedor-texto right"> <!-- Contenedor del primer párrafo lateral (derecha) -->
+        <div class="parrafo-lateral right"> <!-- Primer párrafo lateral (derecha)-->
+            <p>Mi nombre es Chanttal Pacheco, tambien conocida como Xan Proxy. <br>Nacida el 16 de Septiembre de 1991, siempre tuve facinacion por las artes visuales. He dibujado desde que tengo memoria, me gustan los retratos y la arquitectura. <br>Por cosas de la vida terminé estudiando para formar parte del cuerpo AVSEC en la Escuela Tecnica Aeronautica y actualmente mi principal trabajo es ser parte del equipo K9 del aeropuerto Arturo Merino Benitez. <br>Recientemente entre al mundo del tatuaje haciendo un curso en Ankaba (academia de tatuaje) y tambien hice un curso de para crear alfombras.</p>
+        </div>
+    </aside>
 
-<aside class="contenedor-texto left"> <!-- Contenedor del segundo párrafo lateral (izquierda) -->
-    <div class="parrafo-lateral left"> <!-- Segundo párrafo lateral (izquierda) -->
-        <p>¿Por qué un sitio web? porque es ideal para almacenar mis dibujos debido a algunas restricciones que presentasn las redes sociales. <br>¿Tienes algún color favorito? Ninguno en especial, pero me encanta trabajar con escala de grises. <br>¿Haz probado el arte digital? Sí, he hecho trabajos en digital, incluso algunos de los dibujos que hago con lapiz suelo pasarlos a digital.</p>
-    </div>    
-</aside>
-<!-- Fin Parrafos laterales -->
+    <aside class="contenedor-texto left"> <!-- Contenedor del segundo párrafo lateral (izquierda) -->
+        <div class="parrafo-lateral left"> <!-- Segundo párrafo lateral (izquierda) -->
+            <p>¿Por qué un sitio web? porque es ideal para almacenar mis dibujos debido a algunas restricciones que presentasn las redes sociales. <br>¿Tienes algún color favorito? Ninguno en especial, pero me encanta trabajar con escala de grises. <br>¿Haz probado el arte digital? Sí, he hecho trabajos en digital, incluso algunos de los dibujos que hago con lapiz suelo pasarlos a digital.</p>
+        </div>    
+    </aside>
+    <!-- Fin Parrafos laterales -->
     
-    <!-- Inicio Footer -->
-    <footer class="pie"> <!--se inicia creacion de footer -->
-        <div class="grupo-1"><!--division de la imagen izquierda xan's proxy -->
-            <div class="caja"> <!--division para el contenedor de el logo correspondiente en la parte izquierda de nuestro footer -->
-                <figure><!-- apertura figura  -->
-                    <img src="assets/imgs/logo chan 1500x512 v2.png" alt="logo xan proxy"><!--se añade la imagen o logo correspondiente a esta -->
-                </figure><!--cierre de ingreso de logo -->
-            </div><!-- cierre de division de la figura -->
-            <div class="caja"> <!-- caja para agregar a los integrantes-->
-                <h2>Integrantes</h2> <!-- Titulo pequeño para mostrar sobre los integrantes-->
-                <p>Sthefanie "Sami" Castro <br>Jonathan "Dexus" Choque <br>Diego "Miza" Pacheco</p><!-- integrante-->
-                <p></p><!-- integrante-->
-                <p></p><!-- integrante-->
-            </div><!--cierre division caja -->
-            <div class="caja"> <!--nueva caja para los links de interés -->
-                <h2>Siguenos</h2><!--titulo de esta en tamaño h2--> 
-                <div class="redes"> <!--clase redes -->
-                    <a href="https://github.com/MizaBard" target="_blank"><i class="bi bi-github"></i></a><!--ancla(anchor) github -->
-                    <a href="https://www.instagram.com/purenonsince/" target="_blank"><i class="bi bi-instagram"></i></a><!--ancla(anchor) instagram -->
-                    <a href="https://twitter.com/MizaSenpai" target="_blank"><i class="bi bi-twitter-x"></i></a><!--ancla(anchor) Twitter "X"(actualmente)-->
-                </div><!--cierre de clase redes  -->
-            </div><!--cierre de la caja -->
-        </div><!--Cierre de clase grupo 1 es la parte "superior" de nuestro footer"pie de página" -->
-        <div class="grupo-2"><!--abrimos otra division para la parte inferior de nuestro footer(pie de página) -->
-            <small>&copy; 2024 <b>Xan Proxy</b> - Todos los derechos reservados.</small><!--(small comentario pequeño), b(texto el cual no afectará)añade texto extra -->
-        </div><!--cierre de la division  -->
-    </footer> <!--cierre de seccion de footer -->
-    <!-- Fin Footer -->
+        <!-- Inicio Footer -->
+        <footer class="pie"> <!--se inicia creacion de footer -->
+            <div class="grupo-1"><!--division de la imagen izquierda xan's proxy -->
+                <div class="caja"> <!--division para el contenedor de el logo correspondiente en la parte izquierda de nuestro footer -->
+                    <figure><!-- apertura figura  -->
+                        <img src="assets/imgs/logo chan 1500x512 v2.png" alt="logo xan proxy"><!--se añade la imagen o logo correspondiente a esta -->
+                    </figure><!--cierre de ingreso de logo -->
+                </div><!-- cierre de division de la figura -->
+                <div class="caja"> <!-- caja para agregar a los integrantes-->
+                    <h2>Integrantes</h2> <!-- Titulo pequeño para mostrar sobre los integrantes-->
+                    <p>Sthefanie "Sami" Castro <br>Jonathan "Dexus" Choque <br>Diego "Miza" Pacheco</p><!-- integrante-->
+                    <p></p><!-- integrante-->
+                    <p></p><!-- integrante-->
+                </div><!--cierre division caja -->
+                <div class="caja"> <!--nueva caja para los links de interés -->
+                    <h2>Siguenos</h2><!--titulo de esta en tamaño h2--> 
+                    <div class="redes"> <!--clase redes -->
+                        <a href="https://github.com/MizaBard" target="_blank"><i class="bi bi-github"></i></a><!--ancla(anchor) github -->
+                        <a href="https://www.instagram.com/purenonsince/" target="_blank"><i class="bi bi-instagram"></i></a><!--ancla(anchor) instagram -->
+                        <a href="https://twitter.com/MizaSenpai" target="_blank"><i class="bi bi-twitter-x"></i></a><!--ancla(anchor) Twitter "X"(actualmente)-->
+                    </div><!--cierre de clase redes  -->
+                </div><!--cierre de la caja -->
+            </div><!--Cierre de clase grupo 1 es la parte "superior" de nuestro footer"pie de página" -->
+            <div class="grupo-2"><!--abrimos otra division para la parte inferior de nuestro footer(pie de página) -->
+                <small>&copy; 2024 <b>Xan Proxy</b> - Todos los derechos reservados.</small><!--(small comentario pequeño), b(texto el cual no afectará)añade texto extra -->
+            </div><!--cierre de la division  -->
+        </footer> <!--cierre de seccion de footer -->
+        <!-- Fin Footer -->
     
     <!-- inicio de funciones de javascript para el header-->
     <script> /*apertura de javascript */
