--- a/portfolio.html
+++ b/portfolio.html
@@ -28,12 +28,14 @@
                 <li><a href="index.html">Inicio</a></li>
                 <li><a href="infoChan.html">Sobre Xan</a></li>
                 <li><a class="not-active">Portafolio</a></li>
+                <li><a class="patreon.html">Comisiones</a></li>
             </ul>
             <ul>
                 <li><img src="assets/imgs/logo chan 1500x512 v2.png" alt="logo"></li>
                 <li class="hideOnMobile"><a href="index.html">Inicio</a></li>
                 <li class="hideOnMobile"><a href="infoChan.html">Sobre Xan</a></li>
                 <li class="hideOnMobile"><a href="#">Portafolio</a></li>
+                <li class="hideOnMobile"><a href="patreon.html">Comisiones</a></li>
                 <li class="menu-button" onclick=showSidebar()><a href="#"><svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-list" viewBox="0 0 16 16">
                     <path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5"/>
                   </svg></a></li>
