--- a/patreon.html
+++ b/patreon.html
@@ -50,48 +50,64 @@
     </header>
     <!-- Fin menu -->
     <div class="container">
-        <h1 class="text-center mt-5">Oferta de Comisiones</h1>
-        <form id="subscription-form" class="mt-5">
-            <div class="mb-3">
-                <label for="name" class="form-label">Nombre:</label>
-                <input type="text" class="form-control" id="name" name="name" required>
+        <div class="row">
+            <div class="col-md-12">
+                <h1 class="text-center mt-5">Oferta de Comisiones</h1>
+                <form id="subscription-form" class="mt-5" onsubmit="return validarFormulario()">
+                    <div class="mb-3">
+                        <label for="name" class="form-label">Nombre:</label>
+                        <input type="text" class="form-control" id="name" name="name" required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="email" class="form-label">Correo electrónico:</label>
+                        <input type="email" class="form-control" id="email" name="email" required>
+                    </div>
+                    <div class="mb-3">
+                        <label class="form-label">Tipo de Comisión:</label>
+                        <select class="form-select" id="commission-type" name="commission-type" required>
+                            <option value="">Selecciona un tipo</option>
+                            <option value="portrait">Retrato</option>
+                            <option value="landscape">Paisaje</option>
+                            <option value="character">Personaje</option>
+                        </select>
+                    </div>
+                    <div class="mb-3">
+                        <label class="form-label">Método de Pago:</label>
+                        <div class="form-check">
+                            <input class="form-check-input" type="radio" name="payment-method" id="transfer" value="transfer" checked>
+                            <label class="form-check-label" for="transfer">
+                                Transferencia
+                            </label>
+                        </div>
+                        <div class="form-check">
+                            <input class="form-check-input" type="radio" name="payment-method" id="webpay" value="webpay">
+                            <label class="form-check-label" for="webpay">
+                                Webpay
+                            </label>
+                        </div>
+                    </div>
+                    <button type="submit" class="btn btn-primary">Suscribirse</button>
+                </form>
             </div>
-            <div class="mb-3">
-                <label for="email" class="form-label">Correo electrónico:</label>
-                <input type="email" class="form-control" id="email" name="email" required>
-            </div>
-            <div class="mb-3">
-                <label class="form-label">Tipo de Comisión:</label>
-                <select class="form-select" id="commission-type" name="commission-type" required>
-                    <option value="">Selecciona un tipo</option>
-                    <option value="portrait">Retrato</option>
-                    <option value="landscape">Paisaje</option>
-                    <option value="character">Personaje</option>
-                </select>
-            </div>
-            <div class="mb-3">
-                <label class="form-label">Método de Pago:</label>
-                <div class="form-check">
-                    <input class="form-check-input" type="radio" name="payment-method" id="transfer" value="transfer">
-                    <label class="form-check-label" for="transfer">
-                        Transferencia
-                    </label>
+            <div class="col-md-6">
+                <p>aaaaaaaaaaaaaaaaaaaaaaa</p>
+                <!-- Contenido de la segunda columna -->
+                <div class="d-flex">
+                    <div class="flex-fill">
+                        <img src="ruta_de_la_imagen_1.jpg" alt="Imagen 1" class="img-fluid">
+                    </div>
+                    <div class="flex-fill">
+                        <img src="ruta_de_la_imagen_2.jpg" alt="Imagen 2" class="img-fluid">
+                    </div>
+                    <div class="flex-fill">
+                        <img src="ruta_de_la_imagen_3.jpg" alt="Imagen 3" class="img-fluid">
+                    </div>
                 </div>
-                <div class="form-check">
-                    <input class="form-check-input" type="radio" name="payment-method" id="webpay" value="webpay">
-                    <label class="form-check-label" for="webpay">
-                        Webpay
-                    </label>
-                </div>
+                <!-- Aquí puedes colocar lo que desees mostrar en la segunda columna -->
             </div>
-            <button type="submit" class="btn btn-primary">Suscribirse</button>
-        </form>
+        </div>
     </div>
-    <!-- Bootstrap JS y jQuery (si es necesario) -->
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"></script>
-    <!-- Tu script personalizado -->
-    <script src="script.js"></script>
+    
     
     <!-- Inicio Footer -->
     <footer class="pie"> <!--se inicia creacion de footer -->
@@ -135,4 +151,4 @@
     </script><!--cierre de javascript -->
     <!-- fin de las funciones de javascript -->
 </body>
-</html>
+</html>                                                                 
