--- a/index.html
+++ b/index.html
@@ -31,12 +31,16 @@
                 <li><a class="not-active">Inicio</a></li> <!-- link a index-->
                 <li><a href="infoChan.html">Sobre Xan</a></li><!-- link a info chan-->
                 <li><a href="portfolio.html">Portafolio</a></li><!-- link a portafolio de imagenes-->
+                <li><a href="patreon.html">Comisiones</a></li> <!--Link a patreon-->
+                <li><a href="registro.html">Registro</a></li> <!--Link a registro-->
             </ul> <!--unordered list -->
             <ul> <!--Esto cambia si es que lo veo de mi dispositivo movil  y me agrega un pequeño boton de menu lateral en la esquina superior izquierda-->
                 <li><img src="assets/imgs/logo chan 1500x512 v2.png" alt="logo"></li>
-                <li class="hideOnMobile"><a href="#">Inicio</a></li>
+                <li class="hideOnMobile"><a>Inicio</a></li>
                 <li class="hideOnMobile"><a href="infoChan.html">Sobre Xan</a></li>
-                <li class="hideOnMobile"><a href="portfolio.html">Portafolio</a></li>
+                <li class="hideOnMobile"><a href="Portafolio.html">Portafolio</a></li>
+                <li class="hideOnMobile"><a href="patreon.html">Comisiones</a></li>
+                <li class="hideOnMobile"><a href="registro.html">Registro</a></li>
                 <li class="menu-button" onclick=showSidebar()><a href="#"><svg xmlns="http://www.w3.org/2000/svg" height="26" viewBox="0 -960 960 960" width="26"><path d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z"/></svg></a></li>
             </ul>
         </nav>
