--- a/patreon.html
+++ b/patreon.html
@@ -31,20 +31,24 @@
         <nav> <!--Nav viene de la palabra navigator o sea esta nos mandará a los links que esten dentro de esta misma o los podemos redireccionar donde sea deseado-->
             <ul class="sidebar"> <!--Clase barra lateral, contiene una lista y anclas(anchors) a las otras paginas de nuestro sitio web-->
                 <li onclick=hideSidebar()><a href="#"><svg xmlns="http://www.w3.org/2000/svg" height="26" viewBox="0 -960 960 960" width="26"><path d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z"/></svg></a></li>
-                <li><a href="#">Inicio</a></li> <!-- link a index-->
+                <li><a class="not-active">Inicio</a></li> <!-- link a index-->
                 <li><a href="infoChan.html">Sobre Xan</a></li><!-- link a info chan-->
                 <li><a href="portfolio.html">Portafolio</a></li><!-- link a portafolio de imagenes-->
+                <li><a href="patreon.html">Comisiones</a></li> <!--Link a patreon-->
+                <li><a href="registro.html">Registro</a></li> <!--Link a registro-->
             </ul> <!--unordered list -->
             <ul> <!--Esto cambia si es que lo veo de mi dispositivo movil  y me agrega un pequeño boton de menu lateral en la esquina superior izquierda-->
                 <li><img src="assets/imgs/logo chan 1500x512 v2.png" alt="logo"></li>
-                <li class="hideOnMobile"><a href="#">Inicio</a></li>
+                <li class="hideOnMobile"><a href="index.html">Inicio</a></li>
                 <li class="hideOnMobile"><a href="infoChan.html">Sobre Xan</a></li>
-                <li class="hideOnMobile"><a href="portfolio.html">Portafolio</a></li>
+                <li class="hideOnMobile"><a>Comisiones</a></li>
+                <li class="hideOnMobile"><a href="registro.html">Registro</a></li>
                 <li class="menu-button" onclick=showSidebar()><a href="#"><svg xmlns="http://www.w3.org/2000/svg" height="26" viewBox="0 -960 960 960" width="26"><path d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z"/></svg></a></li>
             </ul>
         </nav>
     </header>
     <!-- Fin menu -->
+
     <div class="container">
         <h1 class="text-center mt-5">Oferta de Comisiones</h1>
         <form id="subscription-form" class="mt-5">
