--- a/registro.html
+++ b/registro.html
@@ -1,11 +1,117 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <!-- bootstrap, iconos de bootstrap-->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <!-- hojas de estilos, css, fuentes, colores-->
+    <link rel="stylesheet" href="assets/CSS/menu.css">
+    <link rel="stylesheet" href="assets/CSS/style_footer.css">
+    <!-- fin de imports de estilo (css) -->
+    <!-- Favicon, icono de la pestaña, luego va el tamaño(para diferentes tipo de dispositivo)-->
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/imgs/favicon/apple-touch-icon.png"><!-- este es para apple-->
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/imgs/favicon/avicon-32x32.png"><!-- este es para windows-->
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/imgs/favicon/favicon-16x16.png"><!-- este es para android-->
+    <link rel="manifest" href="assets/imgs/favicon/site.webmanifest">
+    <!-- fin Favicon -->
+
+    <title>Registrarse</title>
 </head>
+
 <body>
+    <!-- menu -->
+    <header class="header"> <!--Clase header-->
+        <nav> <!--Nav viene de la palabra navigator o sea esta nos mandará a los links que esten dentro de esta misma o los podemos redireccionar donde sea deseado-->
+            <ul class="sidebar"> <!--Clase barra lateral, contiene una lista y anclas(anchors) a las otras paginas de nuestro sitio web-->
+                <li onclick=hideSidebar()><a href="#"><svg xmlns="http://www.w3.org/2000/svg" height="26" viewBox="0 -960 960 960" width="26"><path d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z"/></svg></a></li>
+                <li><a class="not-active">Inicio</a></li> <!-- link a index-->
+                <li><a href="infoChan.html">Sobre Xan</a></li><!-- link a info chan-->
+                <li><a href="portfolio.html">Portafolio</a></li><!-- link a portafolio de imagenes-->
+                <li><a href="patreon.html">Comisiones</a></li> <!--Link a patreon-->
+                <li><a href="registro.html">Registro</a></li> <!--Link a registro-->
+            </ul> <!--unordered list -->
+            <ul> <!--Esto cambia si es que lo veo de mi dispositivo movil  y me agrega un pequeño boton de menu lateral en la esquina superior izquierda-->
+                <li><img src="assets/imgs/logo chan 1500x512 v2.png" alt="logo"></li>
+                <li class="hideOnMobile"><a>Inicio</a></li>
+                <li class="hideOnMobile"><a href="infoChan.html">Sobre Xan</a></li>
+                <li class="hideOnMobile"><a href="portfolio.html">Portafolio</a></li>
+                <li class="hideOnMobile"><a href="patreon.html">Comisiones</a></li>
+                <li class="hideOnMobile"><a>Registro</a></li>
+                <li class="menu-button" onclick=showSidebar()><a href="#"><svg xmlns="http://www.w3.org/2000/svg" height="26" viewBox="0 -960 960 960" width="26"><path d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z"/></svg></a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <h2>Formulario de Registro</h2>
+
+    <form action="" method="POST">
+        <label for="nombre">Nombre:</label><br>
+        <input type="text" id="nombre" name="nombre" required><br><br>
+
+        <label for="apellidos">Apellidos:</label><br>
+        <input type="text" id="apellidos" name="apellidos" required><br><br>
+
+        <label for="genero">Género:</label><br>
+        <select id="genero" name="genero" required>
+            <option value="masculino">Masculino</option>
+            <option value="femenino">Femenino</option>
+            <option value="otro">Otro</option>
+        </select><br><br>
+
+        <label for="email">Email:</label><br>
+        <input type="email" id="email" name="email" required><br><br>
+
+        <label for="apodo">Apodo:</label><br>
+        <input type="text" id="apodo" name="apodo" required><br><br>
+
+        <label for="fecha_nacimiento">Fecha de Nacimiento:</label><br>
+        <input type="date" id="fecha_nacimiento" name="fecha_nacimiento" required><br><br>
+
+        <input type="submit" value="Enviar">
+    </form>
+
+     <!-- Inicio Footer -->
+     <footer class="pie"> <!--se inicia creacion de footer -->
+        <div class="grupo-1"><!--division de la imagen izquierda xan's proxy -->
+            <div class="caja"> <!--division para el contenedor de el logo correspondiente en la parte izquierda de nuestro footer -->
+                <figure><!-- apertura figura  -->
+                    <img src="assets/imgs/logo chan 1500x512 v2.png" alt="logo xan proxy"><!--se añade la imagen o logo correspondiente a esta -->
+                </figure><!--cierre de ingreso de logo -->
+            </div><!-- cierre de division de la figura -->
+            <div class="caja"> <!-- caja para agregar a los integrantes-->
+                <h2>Integrantes</h2> <!-- Titulo pequeño para mostrar sobre los integrantes-->
+                <p>Sthefanie "Sami" Castro <br>Jonathan "Dexus" Choque <br>Diego "Miza" Pacheco</p><!-- integrante-->
+                <p></p><!-- integrante-->
+                <p></p><!-- integrante-->
+            </div><!--cierre division caja -->
+            <div class="caja"> <!--nueva caja para los links de interés -->
+                <h2>Siguenos</h2><!--titulo de esta en tamaño h2--> 
+                <div class="redes"> <!--clase redes -->
+                    <a href="https://github.com/MizaBard" target="_blank"><i class="bi bi-github"></i></a><!--ancla(anchor) github -->
+                    <a href="https://www.instagram.com/purenonsince/" target="_blank"><i class="bi bi-instagram"></i></a><!--ancla(anchor) instagram -->
+                    <a href="https://twitter.com/MizaSenpai" target="_blank"><i class="bi bi-twitter-x"></i></a><!--ancla(anchor) Twitter "X"(actualmente)-->
+                </div><!--cierre de clase redes  -->
+            </div><!--cierre de la caja -->
+        </div><!--Cierre de clase grupo 1 es la parte "superior" de nuestro footer"pie de página" -->
+        <div class="grupo-2"><!--abrimos otra division para la parte inferior de nuestro footer(pie de página) -->
+            <small>&copy; 2024 <b>Xan Proxy</b> - Todos los derechos reservados.</small><!--(small comentario pequeño), b(texto el cual no afectará)añade texto extra -->
+        </div><!--cierre de la division  -->
+    </footer> <!--cierre de seccion de footer -->
+    <!-- Fin Footer -->
     
+    <!-- inicio de funciones de javascript para el header-->
+    <script> /*apertura de javascript */
+        function showSidebar(){
+            const sidebar = document.querySelector('.sidebar')
+            sidebar.style.display = 'flex'
+        }
+        function hideSidebar(){
+            const sidebar = document.querySelector('.sidebar')
+            sidebar.style.display = 'none'
+        }
+    </script><!--cierre de javascript -->
+    <!-- fin de las funciones de javascript -->
+
 </body>
 </html>
