--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             </ul> <!--unordered list -->
             <ul> <!--Esto cambia si es que lo veo de mi dispositivo movil  y me agrega un pequeño boton de menu lateral en la esquina superior izquierda-->
                 <li><img src="assets/imgs/logo chan 1500x512 v2.png" alt="logo"></li>
-                <li class="hideOnMobile"><a href="#">Inicio</a></li>
+                <li class="hideOnMobile"><a>Inicio</a></li>
                 <li class="hideOnMobile"><a href="infoChan.html">Sobre Xan</a></li>
                 <li class="hideOnMobile"><a href="portfolio.html">Portafolio</a></li>
                 <li class="menu-button" onclick=showSidebar()><a href="#"><svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-list" viewBox="0 0 16 16">
@@ -73,23 +73,25 @@
                 <a href="#slider-9"></a>
             </div><!--cierre de navegador de slider-->
         </div><!--cierre de la division slider wrapper -->
+
+                <!-- Párrafos laterales -->
+        <aside class="contenedor-texto right"> <!-- Contenedor del primer párrafo lateral (derecha) -->
+            <div class="parrafo-lateral right"> <!-- Primer párrafo lateral (derecha)-->
+                <p>Mi nombre es Chanttal Pacheco, tambien conocida como Xan Proxy. <br>Nacida el 16 de Septiembre de 1991, siempre tuve facinacion por las artes visuales. He dibujado desde que tengo memoria, me gustan los retratos y la arquitectura. <br>Por cosas de la vida terminé estudiando para formar parte del cuerpo AVSEC en la Escuela Tecnica Aeronautica y actualmente mi principal trabajo es ser parte del equipo K9 del aeropuerto Arturo Merino Benitez. <br>Recientemente entre al mundo del tatuaje haciendo un curso en Ankaba (academia de tatuaje) y tambien hice un curso de para crear alfombras.</p>
+            </div>
+        </aside>
+
+        <aside class="contenedor-texto right"> <!-- Contenedor del segundo párrafo lateral (izquierda) -->
+            <div class="parrafo-lateral right"> <!-- Segundo párrafo lateral (izquierda) -->
+                <p>¿Por qué un sitio web? porque es ideal para almacenar mis dibujos debido a algunas restricciones que presentasn las redes sociales. <br>¿Tienes algún color favorito? Ninguno en especial, pero me encanta trabajar con escala de grises. <br>¿Haz probado el arte digital? Sí, he hecho trabajos en digital, incluso algunos de los dibujos que hago con lapiz suelo pasarlos a digital.</p>
+            </div>    
+        </aside>
+        <!-- Fin Parrafos laterales -->
     </section> <!--cierre del contenedor para nuestro carousel -->
 
     <!-- Fin carrusel -->
 
-<!-- Párrafos laterales -->
-<aside class="contenedor-texto right"> <!-- Contenedor del primer párrafo lateral (derecha) -->
-    <div class="parrafo-lateral right"> <!-- Primer párrafo lateral (derecha)-->
-        <p>Mi nombre es Chanttal Pacheco, tambien conocida como Xan Proxy. <br>Nacida el 16 de Septiembre de 1991, siempre tuve facinacion por las artes visuales. He dibujado desde que tengo memoria, me gustan los retratos y la arquitectura. <br>Por cosas de la vida terminé estudiando para formar parte del cuerpo AVSEC en la Escuela Tecnica Aeronautica y actualmente mi principal trabajo es ser parte del equipo K9 del aeropuerto Arturo Merino Benitez. <br>Recientemente entre al mundo del tatuaje haciendo un curso en Ankaba (academia de tatuaje) y tambien hice un curso de para crear alfombras.</p>
-    </div>
-</aside>
 
-<aside class="contenedor-texto left"> <!-- Contenedor del segundo párrafo lateral (izquierda) -->
-    <div class="parrafo-lateral left"> <!-- Segundo párrafo lateral (izquierda) -->
-        <p>¿Por qué un sitio web? porque es ideal para almacenar mis dibujos debido a algunas restricciones que presentasn las redes sociales. <br>¿Tienes algún color favorito? Ninguno en especial, pero me encanta trabajar con escala de grises. <br>¿Haz probado el arte digital? Sí, he hecho trabajos en digital, incluso algunos de los dibujos que hago con lapiz suelo pasarlos a digital.</p>
-    </div>    
-</aside>
-<!-- Fin Parrafos laterales -->
     
     <!-- Inicio Footer -->
     <footer class="pie"> <!--se inicia creacion de footer -->
