--- a/infoChan.html
+++ b/infoChan.html
@@ -31,7 +31,7 @@
             <ul>
                 <li><img src="assets/imgs/logo chan 1500x512 v2.png" alt="logo"></li>
                 <li class="hideOnMobile"><a href="index.html">Inicio</a></li>
-                <li class="hideOnMobile"><a href="#">Sobre Xan</a></li>
+                <li class="hideOnMobile"><a>Sobre Xan</a></li>
                 <li class="hideOnMobile"><a href="portfolio.html">Portafolio</a></li>
                 <li class="menu-button" onclick=showSidebar()><a href="#"><svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-list" viewBox="0 0 16 16">
                     <path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5"/>
@@ -49,10 +49,12 @@
           <h1>¡Hola a todos! Yo soy Xan</h1> <!--Texto inicial de infoChan --> 
         </section> <!--cierre de la primera seccion de parallax-->
         <section class="parallax bg"><!--clase parallax background -->
-          <h2>Sitio web dedicado a la exposición de mi Portafolio Artistico</h2>
+          <h1>Misión</h1>
+          <p> <br> "Nuestra misión es destacar y promover el talento único de Xan Proxy, brindando un espacio creativo donde sus obras puedan ser apreciadas y compartidas con el mundo. <br>Nos esforzamos por fomentar la conexión entre la artista y su audiencia, celebrando la diversidad cultural y la expresión artística a través de nuestras plataformas."</p>
         </section>
         <section class="no-parallax">
-          <h1>Puedes contactarme para saber sobre comisiones</h1>
+          <h1>Visión</h1>
+          <p> <br> "Nuestra visión es convertirnos en el principal destino en línea para descubrir y apoyar el arte de Xan Proxy. Buscamos ser un faro de inspiración y creatividad, <br>conectando a la artista con una comunidad global apasionada por el arte visual. Aspiramos a ser un espacio inclusivo donde tanto los amantes del arte como los profesionales encuentren inspiración, <br>colaboración y oportunidades para crecer juntos."</p>
         </section>
         <div class="video-container"> <!--contenedor de video -->
             <iframe width="560" height="315" src="https://www.youtube.com/embed/2GKtK5_phTM?si=yMVOaICmLCAsoIjb" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
