fotos del patreon
puse las fotos

--- a/patreon.html
+++ b/patreon.html
@@ -98,13 +98,13 @@
                 <!-- Contenido de la segunda columna -->
                 <div class="d-flex">
                     <div class="flex-fill">
-                        <img src="ruta_de_la_imagen_1.jpg" alt="Imagen 1" class="img-fluid">
+                        <img src="assets/imgs/dibujo1.png" alt="Imagen 1" class="img-fluid">
                     </div>
                     <div class="flex-fill">
-                        <img src="ruta_de_la_imagen_2.jpg" alt="Imagen 2" class="img-fluid">
+                        <img src="assets/imgs/dibujo2.png" alt="Imagen 2" class="img-fluid">
                     </div>
                     <div class="flex-fill">
-                        <img src="ruta_de_la_imagen_3.jpg" alt="Imagen 3" class="img-fluid">
+                        <img src="assets/imgs/dibujo3.png" alt="Imagen 3" class="img-fluid">
                     </div>
                 </div>
                 <!-- Aquí puedes colocar lo que desees mostrar en la segunda columna -->
