--- a/patreon.html
+++ b/patreon.html
@@ -94,17 +94,20 @@
                 </form>
             </div>
             <div class="col-md-6">
-                <p>aaaaaaaaaaaaaaaaaaaaaaa</p>
+                <h1 class="text-center mt-5">Descripción de las comisiones</h1>
                 <!-- Contenido de la segunda columna -->
-                <div class="d-flex">
-                    <div class="flex-fill">
+                <div class="d-flex flex-column">
+                    <div class="flex-fill d-flex align-items-center">
                         <img src="assets/imgs/dibujo1.png" alt="Imagen 1" class="img-fluid">
+                        <p>Dibujo Lineart</p>
                     </div>
-                    <div class="flex-fill">
+                    <div class="flex-fill d-flex align-items-center">
                         <img src="assets/imgs/dibujo2.png" alt="Imagen 2" class="img-fluid">
+                        <p>Dibujo Color Base</p>
                     </div>
-                    <div class="flex-fill">
+                    <div class="flex-fill d-flex align-items-center">
                         <img src="assets/imgs/dibujo3.png" alt="Imagen 3" class="img-fluid">
+                        <p>Dibujo Full Color</p>
                     </div>
                 </div>
                 <!-- Aquí puedes colocar lo que desees mostrar en la segunda columna -->
