--- a/patreon.html
+++ b/patreon.html
@@ -52,11 +52,73 @@
         </nav>
     </header>
     <!-- Fin menu -->
-
-    <div class="container">
+    <div class="container-fluid">
         <div class="row">
             <div class="col-md-12">
-                <h1 class="text-center mt-5">Oferta de Comisiones</h1>
+                <h2 class="text-muted text-center">
+                    Oferta de Comisiones
+                </h2>
+                <div class="row">
+                    <div class="col-md-4">
+                        <img src="assets/imgs/dibujo1.png" alt="Imagen 1" class="img-ejemplo">
+
+                        <h3>
+                            LineArt
+                        </h3>
+                        <p>
+                            Aquí encontrarás solamente el esquema base de tu dibujo,
+                            <h4>2.500 CLP</h4>
+                        </p>
+                        <p>
+                            <a class="btn" href="#">View details »</a>
+                        </p>
+                    </div>
+                    <div class="col-md-4">
+                        <img src="assets/imgs/dibujo2.png" alt="Imagen 2" class="img-fluid">
+                        <h3>
+                            Color Base
+                        </h3>
+                        <p>
+                            Aquí se incluye el lineart básico con las capas de color principales que corresponden al encargo.
+                            <h4>8.000 CLP</h4>
+                        </p>
+                        <p>
+                            <a class="btn" href="#">View details »</a>
+                        </p>
+                    </div>
+                    <div class="col-md-4">
+                        <img src="assets/imgs/dibujo3.png" alt="Imagen 3" class="img-fluid">
+                        <h3>
+                            Full Color
+                        </h3>
+                        <p>
+                            Esta es la versión más completa y personalizada de tu comisión, aquí encontrarás con gran detalle tu dibujo, incluyendo uso de luces, sombras y profundidad.
+                            <h4>15.000 CLP</h4>
+                        </p>
+                        <p>
+                            <a class="btn" href="#">View details »</a>
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12">
+                <h3 class="text-success text-center">
+                    Formulario de Comisión
+                </h3>
+                <p class="lead text-center">
+                    En esta sección puedes ponerte en contacto conmigo a través de un formulario, 
+                    solo debes llenar algunos datos importantes
+                    <strong> (incluyendo cual comisión deseas) </strong>
+                    y me pondré en contacto contigo.
+                    Recordar que el formato digital es solo de referencia, cuando nos contactemos puedes indicarme
+                    si prefieres tradicional o digital.
+                </p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12">
                 <form id="subscription-form" class="mt-5" onsubmit="return validarFormulario()">
                     <div class="mb-3">
                         <label for="name" class="form-label">Nombre:</label>
@@ -93,28 +155,10 @@
                     <button type="submit" class="btn btn-primary">Suscribirse</button>
                 </form>
             </div>
-            <div class="col-md-6">
-                <h1 class="text-center mt-5">Descripción de las comisiones</h1>
-                <!-- Contenido de la segunda columna -->
-                <div class="d-flex flex-column">
-                    <div class="flex-fill d-flex align-items-center">
-                        <img src="assets/imgs/dibujo1.png" alt="Imagen 1" class="img-fluid">
-                        <p>Dibujo Lineart</p>
-                    </div>
-                    <div class="flex-fill d-flex align-items-center">
-                        <img src="assets/imgs/dibujo2.png" alt="Imagen 2" class="img-fluid">
-                        <p>Dibujo Color Base</p>
-                    </div>
-                    <div class="flex-fill d-flex align-items-center">
-                        <img src="assets/imgs/dibujo3.png" alt="Imagen 3" class="img-fluid">
-                        <p>Dibujo Full Color</p>
-                    </div>
-                </div>
-                <!-- Aquí puedes colocar lo que desees mostrar en la segunda columna -->
-            </div>
         </div>
     </div>
     
+
     
     <!-- Inicio Footer -->
     <footer class="pie"> <!--se inicia creacion de footer -->
