--- a/patreon.html
+++ b/patreon.html
@@ -160,7 +160,6 @@
     
 
     
-    <!-- Inicio Footer -->
     <footer class="pie"> <!--se inicia creacion de footer -->
         <div class="grupo-1"><!--division de la imagen izquierda xan's proxy -->
             <div class="caja"> <!--division para el contenedor de el logo correspondiente en la parte izquierda de nuestro footer -->
@@ -170,9 +169,7 @@
             </div><!-- cierre de division de la figura -->
             <div class="caja"> <!-- caja para agregar a los integrantes-->
                 <h2>Integrantes</h2> <!-- Titulo pequeño para mostrar sobre los integrantes-->
-                <p>Sthefanie "Sami" Castro</p><!-- integrante-->
-                <p>Jonathan "Dexus" Choque</p><!-- integrante-->
-                <p>Diego "Miza" Pacheco</p><!-- integrante-->
+                <p>Sthefanie "Sami" Castro <br>Jonathan "Dexus" Choque <br>Diego "Miza" Pacheco</p><!-- integrante-->
             </div><!--cierre division caja -->
             <div class="caja"> <!--nueva caja para los links de interés -->
                 <h2>Siguenos</h2><!--titulo de esta en tamaño h2--> 
