--- a/registro.html
+++ b/registro.html
@@ -25,15 +25,15 @@
         <nav> <!--Nav viene de la palabra navigator o sea esta nos mandará a los links que esten dentro de esta misma o los podemos redireccionar donde sea deseado-->
             <ul class="sidebar"> <!--Clase barra lateral, contiene una lista y anclas(anchors) a las otras paginas de nuestro sitio web-->
                 <li onclick=hideSidebar()><a href="#"><i class="bi bi-x-lg"></i></a></li>
-                <li><a class="not-active">Inicio</a></li> <!-- link a index-->
+                <li><a href="index.html">Inicio</a></li> <!-- link a index-->
                 <li><a href="infoChan.html">Sobre Xan</a></li><!-- link a info chan-->
                 <li><a href="portfolio.html">Portafolio</a></li><!-- link a portafolio de imagenes-->
                 <li><a href="patreon.html">Comisiones</a></li> <!--Link a patreon-->
-                <li><a href="registro.html">Registro</a></li> <!--Link a registro-->
+                <li><a class="not-active">Registro</a></li> <!--Link a registro-->
             </ul> <!--unordered list -->
             <ul> <!--Esto cambia si es que lo veo de mi dispositivo movil  y me agrega un pequeño boton de menu lateral en la esquina superior izquierda-->
                 <li><img src="assets/imgs/logo chan 1500x512 v2.png" alt="logo"></li>
-                <li class="hideOnMobile"><a>Inicio</a></li>
+                <li class="hideOnMobile"><a href="index.html">Inicio</a></li>
                 <li class="hideOnMobile"><a href="infoChan.html">Sobre Xan</a></li>
                 <li class="hideOnMobile"><a href="portfolio.html">Portafolio</a></li>
                 <li class="hideOnMobile"><a href="patreon.html">Comisiones</a></li>
@@ -84,8 +84,6 @@
             <div class="caja"> <!-- caja para agregar a los integrantes-->
                 <h2>Integrantes</h2> <!-- Titulo pequeño para mostrar sobre los integrantes-->
                 <p>Sthefanie "Sami" Castro <br>Jonathan "Dexus" Choque <br>Diego "Miza" Pacheco</p><!-- integrante-->
-                <p></p><!-- integrante-->
-                <p></p><!-- integrante-->
             </div><!--cierre division caja -->
             <div class="caja"> <!--nueva caja para los links de interés -->
                 <h2>Siguenos</h2><!--titulo de esta en tamaño h2--> 
