--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <li><a href="registro.html">Registro</a></li> <!--Link a registro-->
             </ul> <!--unordered list -->
             <ul> <!--Esto cambia si es que lo veo de mi dispositivo movil  y me agrega un pequeño boton de menu lateral en la esquina superior izquierda-->
-                <li><img src="assets/imgs/logo chan 1500x512 v2.png" alt="logo"></li>
+                <li><img src="assets/imgs/logo-xan-proxy.png" alt="logo"></li>
                 <li class="hideOnMobile"><a>Inicio</a></li>
                 <li class="hideOnMobile"><a href="infoChan.html">Sobre Xan</a></li>
                 <li class="hideOnMobile"><a href="Portafolio.html">Portafolio</a></li>
@@ -102,7 +102,7 @@
             <div class="grupo-1"><!--division de la imagen izquierda xan's proxy -->
                 <div class="caja"> <!--division para el contenedor de el logo correspondiente en la parte izquierda de nuestro footer -->
                     <figure><!-- apertura figura  -->
-                        <img src="assets/imgs/logo chan 1500x512 v2.png" alt="logo xan proxy"><!--se añade la imagen o logo correspondiente a esta -->
+                        <img src="assets/imgs/logo-xan-proxy.png" alt="logo xan proxy"><!--se añade la imagen o logo correspondiente a esta -->
                     </figure><!--cierre de ingreso de logo -->
                 </div><!-- cierre de division de la figura -->
                 <div class="caja"> <!-- caja para agregar a los integrantes-->
