--- a/infoChan.html
+++ b/infoChan.html
@@ -32,7 +32,7 @@
                 <li><a href="registro.html">Registro</a></li> <!--Link a registro-->
             </ul> <!--unordered list -->
             <ul> <!--Esto cambia si es que lo veo de mi dispositivo movil  y me agrega un pequeño boton de menu lateral en la esquina superior izquierda-->
-                <li><img src="assets/imgs/logo chan 1500x512 v2.png" alt="logo"></li>
+                <li><img src="assets/imgs/logo-xan-proxy.png" alt="logo"></li>
                 <li class="hideOnMobile"><a href="index.html">Inicio</a></li>
                 <li class="hideOnMobile"><a>Sobre Xan</a></li>
                 <li class="hideOnMobile"><a href="portfolio.html">Portafolio</a></li>
@@ -75,7 +75,7 @@
         <div class="grupo-1">
             <div class="caja">
                 <figure>
-                    <img src="assets/imgs/logo chan 1500x512 v2.png" alt="logo xan proxy">
+                    <img src="assets/imgs/logo-xan-proxy.png" alt="logo xan proxy">
                 </figure>
             </div>
             <div class="caja">
