--- a/registro.html
+++ b/registro.html
@@ -32,6 +32,7 @@
                 <li><a href="portfolio.html">Portafolio</a></li><!-- link a portafolio de imagenes-->
                 <li><a href="patreon.html">Comisiones</a></li> <!--Link a patreon-->
                 <li><a class="not-active">Registro</a></li> <!--Link a registro-->
+                <li><a href="Instagram.html">Instagram</a></li>
             </ul> <!--unordered list -->
             <ul> <!--Esto cambia si es que lo veo de mi dispositivo movil  y me agrega un pequeño boton de menu lateral en la esquina superior izquierda-->
                 <li><img src="assets/imgs/logo-xan-proxy.png" alt="logo"></li>
@@ -40,6 +41,7 @@
                 <li class="hideOnMobile"><a href="portfolio.html">Portafolio</a></li>
                 <li class="hideOnMobile"><a href="patreon.html">Comisiones</a></li>
                 <li class="hideOnMobile"><a>Registro</a></li>
+                <li class="hideOnMobile"><a href="Instagram.html">Instagram</a></li>
                 <li class="menu-button" onclick=showSidebar()><a href="#"><svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-list" viewBox="0 0 16 16">
                     <path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5"/>
                   </svg></i></a></li>
