agregado de foto
en el index para que se viera mas bonito

--- a/index.html
+++ b/index.html
@@ -91,6 +91,9 @@
         <aside class="contenedor-texto right"> <!-- Contenedor del segundo párrafo lateral (izquierda) -->
             <div class="parrafo-lateral right"> <!-- Segundo párrafo lateral (izquierda) -->
                 <p>¿Por qué un sitio web? porque es ideal para almacenar mis dibujos debido a algunas restricciones que presentasn las redes sociales. <br>¿Tienes algún color favorito? Ninguno en especial, pero me encanta trabajar con escala de grises. <br>¿Haz probado el arte digital? Sí, he hecho trabajos en digital, incluso algunos de los dibujos que hago con lapiz suelo pasarlos a digital.</p>
+                <div class="text-center">
+                    <img src="assets/imgs/chibi.jpg" alt="Descripción de la imagen" class="img-fluid">
+                </div>
             </div>    
         </aside>
         <!-- Fin Parrafos laterales -->
